--- a/onono/src/index.css
+++ b/onono/src/index.css
@@ -7,7 +7,8 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
   /* font-family: 'Edu NSW ACT Foundation', cursive; */
-  font-family: 'Caveat', cursive;
+  /* font-family: 'Caveat', cursive; */
+  font-family: 'Outfit', sans-serif;
   color: #000000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
