--- a/onono/src/App.css
+++ b/onono/src/App.css
@@ -3,3 +3,67 @@
 .App {
   text-align: center;
 }
+
+.nav.focused {
+  padding-left: 10vw;
+  text-decoration: none;
+  display: flex;
+  vertical-align: center;
+  justify-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: black;
+}
+
+.nav.unfocused {
+  display: flex;
+  flex-direction: row;
+  color: black;
+}
+
+.nav:hover {
+  text-decoration: none;
+  color:#696969;
+}
+
+h1.focused {
+  color: black;
+  padding-left: 5vw;
+  padding-top: 25vh;
+  font-size: 10vh;
+}
+
+h1.unfocused {
+  color: black;
+  font-size: 3vh;
+  padding-top: 20px;
+  padding-left: 3vw;
+  padding-right: 20px;
+  margin-top: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a.focused {
+  padding-left: 5vw;
+  font-size: 5vh;
+  padding-top: 17px;
+  text-decoration: none;
+  color: black;
+}
+
+a.unfocused {
+  font-size: 3vh;
+  padding-top: 20px;
+  padding-left: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  text-decoration: none;
+  color:#696969;
+}
