--- a/onono/src/Pages/Login/Reset.css
+++ b/onono/src/Pages/Login/Reset.css
@@ -1,25 +1,30 @@
-.dashboard {
+.reset {
     height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .dashboard__container {
+  .reset__container {
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: #dcdcdc;
     padding: 30px;
   }
-  .dashboard__btn {
+  .reset__textBox {
     padding: 10px;
     font-size: 18px;
-    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .reset__btn {
+    padding: 10px;
+    font-size: 18px;
+    margin-bottom: 10px;
     border: none;
     color: white;
     background-color: black;
   }
-  .dashboard div {
+  .reset div {
     margin-top: 7px;
   }
