--- a/onono/src/Pages/Auth/Login.css
+++ b/onono/src/Pages/Auth/Login.css
@@ -1,33 +1,50 @@
 .login {
-    height: 100vh;
+    height: 75vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .login__container {
+    flex-direction: column;
+    padding-top: 0px;
+}
+  
+.login__container {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
+    background-color: #ffffff;
     padding: 30px;
-  }
-  .login__textBox {
+}
+
+.login__textBox {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
-  }
-  .login__btn {
+}
+
+.login__btn {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
     border: none;
     color: white;
     background-color: black;
-  }
-  .login__google {
+}
+
+.login__btn:hover {
+    cursor: pointer;
+}
+
+.login__google {
     background-color: #4285f4;
-  }
-  .login div {
+}
+
+.login div {
     margin-top: 7px;
-  }
+}
+
+.logo {
+    font-size: 10vw;
+    margin-bottom: 0px;
+    margin-top: 0px !important;
+}
