--- a/onono/src/Pages/Auth/Register.css
+++ b/onono/src/Pages/Auth/Register.css
@@ -1,30 +1,43 @@
-.reset {
-    height: 100vh;
+.register {
+    height: 80vh;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-  .reset__container {
+    flex-direction: column;
+}
+
+.register__container {
     display: flex;
     flex-direction: column;
     text-align: center;
-    background-color: #dcdcdc;
+    background-color: #ffffff;
     padding: 30px;
-  }
-  .reset__textBox {
+}
+
+.register__textBox {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
-  }
-  .reset__btn {
+}
+
+.register__btn {
     padding: 10px;
     font-size: 18px;
     margin-bottom: 10px;
     border: none;
     color: white;
     background-color: black;
-  }
-  .reset div {
+}
+
+.register__btn:hover {
+  cursor: pointer;
+}
+
+.register__google {
+    background-color: #4285f4;
+}
+
+.register div {
     margin-top: 7px;
-  }
+}
